tdf#106382 - Fix incorrectly shown change tracking comments in dialog

First item in the array is treated as the number of fields followed by
their widths. There are only 4 such fields in case of writer, not 5.

Change-Id: Iff6f21b54b73d4395d64d83f2acf1de2a19a251e
Reviewed-on: https://gerrit.libreoffice.org/35484
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Jan Holesovsky <kendy@collabora.com>
(cherry picked from commit 551e86ff278d4608a54d311f387ca57ef4732000)
Reviewed-on: https://gerrit.libreoffice.org/35502
(cherry picked from commit 181cbe104b9f8f0d0812db082d68f4d5e1bc281b)